--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -11,6 +11,9 @@
     opacity: .6;
     transition: linear .3s; 
 }
+.profile__add-button:focus{
+    outline: none;
+}
 @media screen and (max-width: 680px){
     .profile__add-button{
         background: url("../../../images/Add_Button_big.svg");
