вторая итерация JS

--- a/blocks/cards/__like/cards__like.css
+++ b/blocks/cards/__like/cards__like.css
@@ -5,6 +5,7 @@
     background-repeat: no-repeat;
     border: none;
     cursor: pointer;
+    background-size: contain;
 }
 .cards__like:hover{
     opacity: .6;
