--- a/blocks/modal/__close-button/modal__close-button.css
+++ b/blocks/modal/__close-button/modal__close-button.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: -41px;
     right: -41px;
-    background: url("../../../images/Close_button.svg");
+    background: url("../../../images/close_button.svg");
     background-size: cover;
     width: 41px;
     height: 41px;
