--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,9 @@
 @import url("__logo/header__logo.css");
-@import url("__line/header__line.css");
 .header{
     max-width: 880px;
     padding-top: 45px;
     margin: 0 auto;
+    border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
 @media screen and (max-width: 890px){
     .header{
@@ -17,7 +17,7 @@
 }
 @media screen and (max-width: 320px){
     .header{
+        max-width: 320px;
         padding-top: 28px;
-        max-width: 281px;
     }
 }
