--- a/blocks/modal/__content/modal__content.css
+++ b/blocks/modal/__content/modal__content.css
@@ -1,13 +1,12 @@
 .modal__content{
     max-width: 430px;
-    max-height: 330px;
     background: white;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     padding-top: 34px;
     display: flex;
     flex-direction: column;
-    position: fixed;
+    position: relative;
 }
 @media screen and (max-width: 320px){
     .modal__content{
