--- a/blocks/modal/__input/modal__input.css
+++ b/blocks/modal/__input/modal__input.css
@@ -1,4 +1,5 @@
 .modal__input{
+    font-family: "Inter", Arial, sans-serif;
     max-width: 358px;
     margin-left: 36px;
     margin-right: 36px;
