--- a/blocks/modal/__save/modal__save.css
+++ b/blocks/modal/__save/modal__save.css
@@ -13,7 +13,7 @@
     font-weight: normal;
     text-align: center;
     color: white;
-    
+    border: none;
 }
 .modal__save:hover{
     background: rgba(0, 0, 0, 0.8);
