--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,5 +1,5 @@
 .profile__add-button{
-    background: url("../../../images/Add_Button.svg");
+    background: url("../../../images/add_button.svg");
     background-repeat: no-repeat;
     border: none;
     width: 150px;
@@ -16,7 +16,7 @@
 }
 @media screen and (max-width: 680px){
     .profile__add-button{
-        background: url("../../../images/Add_Button_big.svg");
+        background: url("../../../images/add_button_big.svg");
         width: 282px;
         height: 50px;
         margin: 0 auto;
