--- a/pages/style.css
+++ b/pages/style.css
@@ -10,3 +10,5 @@
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/modal/modal.css");
 @import url("../blocks/modal/_open/modal_open.css"); /* иначе не работает */
+@import url("../blocks/modal/_close/modal_close.css");
+@import url("../blocks/cards/__like/_active/cards__like_button_active.css");
