--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -4,6 +4,7 @@
 @import url("__title-style/cards__title-style.css");
 @import url("__like/cards__like.css");
 @import url("__list/cards__list.css");
+@import url("__trash/cards__trash.css");
 .cards{
     display: flex;
     flex-direction: column;
@@ -11,4 +12,5 @@
     background: #FFFFFF;
     border-radius: 10px;
     overflow: hidden;
+    justify-content: space-between;
 }
