--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -13,14 +13,20 @@
     .elements{
         grid-template-columns:repeat(2, minmax(141px, 282px));
         grid-template-rows: repeat(3, 1fr);
+        grid-gap: 10px;
         max-width: 720px;
         justify-content: center;
+    }
+} 
+@media screen and (max-width: 480px){  
+    .elements{
+        grid-template-columns:repeat(1, minmax(141px, 282px));
+        max-width: 480px;
     }
 } 
 @media screen and (max-width: 320px){  
     .elements{
         grid-template-columns:repeat(1, minmax(141px, 282px));
-        grid-template-rows: repeat(auto, 1fr);
         max-width: 320px;
         padding-top: 36px;
         grid-gap: 20px;
