--- a/blocks/modal/_close/modal_close.css
+++ b/blocks/modal/_close/modal_close.css
@@ -1,3 +1,6 @@
 .modal_close{
-    display: none;
+    opacity: 0;
+    visibility: hidden;
+    
+    transition: visibility .3s, opacity .3s linear;
 }
