--- a/blocks/modal/_open/modal_open.css
+++ b/blocks/modal/_open/modal_open.css
@@ -1,3 +1,6 @@
 .modal_open{
-    display: flex;
-}
+    opacity: 1;
+    visibility: visible;
+    
+    transition: visibility .3s, opacity .3s linear;
+ }
