--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -4,14 +4,20 @@
 @import url("__input/modal__input.css");
 @import url("__close-button/modal__close-button.css");
 @import url("__save/modal__save.css");
+@import url("__photo-signature/modal__photo-signature.css");
+@import url("__photo-zoom/modal__photo-zoom.css");
+@import url("__content-zoom/modal__content-zoom.css");
 .modal{
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    display: none;
+    /* display: none; */
+    display: flex;
     align-items: center;
     justify-content: center;
     background-color: rgba(0, 0, 0, .5);
+    transition: visibility .3s, opacity .3s linear;
+    
 }
