--- a/blocks/modal/__input/modal__input.css
+++ b/blocks/modal/__input/modal__input.css
@@ -4,6 +4,7 @@
     margin-left: 36px;
     margin-right: 36px;
     margin-bottom: 30px;
+    outline: none;
     border-top-style: none;
     border-right-style: none;
     border-left-style: none;
