--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -7,6 +7,7 @@
 @import url("__photo-signature/modal__photo-signature.css");
 @import url("__photo-zoom/modal__photo-zoom.css");
 @import url("__content-zoom/modal__content-zoom.css");
+@import url("__label/modal__label.css");
 .modal{
     position: fixed;
     top: 0;
