--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -1,5 +1,6 @@
 @import url("__avatar/profile__avatar.css");
 @import url("__add-button/profile__add-button.css");
+@import url("__pensil/profile__pensil.css");
 .profile{
     display: flex;
     align-items: center;
