--- a/src/blocks/cards/cards.css
+++ b/src/blocks/cards/cards.css
@@ -4,6 +4,9 @@
 @import url("__like/cards__like.css");
 @import url("__list/cards__list.css");
 @import url("__trash/cards__trash.css");
+@import url("__likes-data/cards__likes-data.css");
+@import url("__likes-quantity/cards__likes-quantity.css");
+@import url("__trash/_show/cards__trash_show.css");
 .cards{
     display: flex;
     flex-direction: column;
@@ -12,4 +15,5 @@
     border-radius: 10px;
     overflow: hidden;
     justify-content: space-between;
+    
 }
