--- a/src/blocks/modal/__content/modal__content.css
+++ b/src/blocks/modal/__content/modal__content.css
@@ -1,5 +1,5 @@
 .modal__content{
-    max-width: 430px;
+    width: 430px;
     background: white;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
@@ -10,6 +10,6 @@
 }
 @media screen and (max-width: 320px){
     .modal__content{
-        max-width: 282px;
+        width: 282px;
     }
 }
